# event_simulator_ros

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
docker/: catkin-update-compile-commands  merge-compile-commands
docker/cuda/: Dockerfile  metavision.list
docker/non_cuda/: Dockerfile
scripts/: compare_events_statistics.py  eventslicer.py  get_accumulated_events_from_desec.py  get_events_statistics_from_dsec.py  get_events_statistics_from_raw.py  get_events_statistics_from_v2e.py
src/: event_simulator_ros.cpp  event_simulator_timings.cpp  event_simulator_video.cpp
